tests/machine/x/hs/string_prefix_slice.error

/workspace/mochi/tests/machine/x/hs/string_prefix_slice.hs:133:11: error:
    • Couldn't match expected type: String -> String
                  with actual type: [Char]
    • The function ‘_sliceString’ is applied to four value arguments,
        but its type ‘String -> Int -> Int -> [Char]’ has only three
      In the first argument of ‘(==)’, namely
        ‘_sliceString s1 0 length prefix’
      In the first argument of ‘print’, namely
        ‘((_sliceString s1 0 length prefix == prefix))’
    |
133 |   print ((_sliceString s1 0 length prefix == prefix))
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/string_prefix_slice.hs:133:29: error:
    • Couldn't match expected type ‘Int’
                  with actual type ‘t0 a0 -> Int’
    • Probable cause: ‘length’ is applied to too few arguments
      In the third argument of ‘_sliceString’, namely ‘length’
      In the first argument of ‘(==)’, namely
        ‘_sliceString s1 0 length prefix’
      In the first argument of ‘print’, namely
        ‘((_sliceString s1 0 length prefix == prefix))’
    |
133 |   print ((_sliceString s1 0 length prefix == prefix))
    |                             ^^^^^^

/workspace/mochi/tests/machine/x/hs/string_prefix_slice.hs:134:11: error:
    • Couldn't match expected type: String -> String
                  with actual type: [Char]
    • The function ‘_sliceString’ is applied to four value arguments,
        but its type ‘String -> Int -> Int -> [Char]’ has only three
      In the first argument of ‘(==)’, namely
        ‘_sliceString s2 0 length prefix’
      In the first argument of ‘print’, namely
        ‘((_sliceString s2 0 length prefix == prefix))’
    |
134 |   print ((_sliceString s2 0 length prefix == prefix))
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

/workspace/mochi/tests/machine/x/hs/string_prefix_slice.hs:134:29: error:
    • Couldn't match expected type ‘Int’
                  with actual type ‘t1 a1 -> Int’
    • Probable cause: ‘length’ is applied to too few arguments
      In the third argument of ‘_sliceString’, namely ‘length’
      In the first argument of ‘(==)’, namely
        ‘_sliceString s2 0 length prefix’
      In the first argument of ‘print’, namely
        ‘((_sliceString s2 0 length prefix == prefix))’
    |
134 |   print ((_sliceString s2 0 length prefix == prefix))
    |                             ^^^^^^


Context around line 133:
  131| main :: IO ()
  132| main = do
  133|   print ((_sliceString s1 0 length prefix == prefix))
  134|   print ((_sliceString s2 0 length prefix == prefix))
  135| 
